--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 members = [
     "aoc_utils",
     "2025/day1",
-    "2025/day2", "2025/day3",
+    "2025/day2",
+    "2025/day3",
+    "2025/day4",
 ]
 
 resolver = "2"
