--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,7 @@
 [workspace]
 members = [
     "aoc_utils",
-    "2025/day1",
-    "2025/day2",
-    "2025/day3",
-    "2025/day4",
-    "2025/day5",
+    "2025/day*",
 ]
 
 resolver = "2"
